cluster/apps/archivebox/archivebox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: archivebox
    hajimari.io/enable: "true"
    hajimari.io/icon: archive-search
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: archivebox
  name: archivebox
  namespace: archivebox
spec:
  ingressClassName: traefik
  rules:
  - host: "archivebox.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: archivebox
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "archivebox.${SECRET_DOMAIN}"
    secretName: archivebox-server-tls
